force-app/main/default/objects/sugati__MulticomSetting__c/sugati__MulticomSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for Multicom integration</description>
    <label>Multicom Setting</label>
</CustomObject>