force-app/main/default/objects/sugati__MulticomSetting__c/fields/sugati__API_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__API_Endpoint_URL__c</fullName>
    <inlineHelpText>HTTPs url for the Multicom requests</inlineHelpText>
    <label>API Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>