force-app/main/default/objects/sugati__MulticomSetting__c/fields/sugati__Default_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__Default_Margin__c</fullName>
    <defaultValue>31.58</defaultValue>
    <inlineHelpText>Margin which will be applied to the supplier cost for Multicom suppliers</inlineHelpText>
    <label>Default Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>