force-app/main/default/objects/sugati__MulticomSetting__c/fields/sugati__Live__c.field-meta.xml
<CustomField>
    <fullName>sugati__Live__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should be checked if you are using the live environment.</inlineHelpText>
    <label>Live</label>
    <type>Checkbox</type>
</CustomField>