force-app/main/default/objects/sugati__MulticomSetting__c/fields/sugati__Result_Per_Page__c.field-meta.xml
<CustomField>
    <fullName>sugati__Result_Per_Page__c</fullName>
    <inlineHelpText>Number of accommodation should appear on a single page</inlineHelpText>
    <label>Result Per Page</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>