force-app/main/default/objects/sugati__MulticomSetting__c/fields/sugati__Star_Rating_From__c.field-meta.xml
<CustomField>
    <fullName>sugati__Star_Rating_From__c</fullName>
    <inlineHelpText>Provide any value from 1-5 to set the default search rating for your results.</inlineHelpText>
    <label>Star Rating From</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>