force-app/main/default/objects/sugati__MulticomSetting__c/fields/sugati__Syndicator_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__Syndicator_Id__c</fullName>
    <inlineHelpText>Syndicator Id provided by Multicom</inlineHelpText>
    <label>Syndicator Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>