force-app/main/default/objects/sugati__MulticomSetting__c/fields/sugati__Syndicator_Password__c.field-meta.xml
<CustomField>
    <fullName>sugati__Syndicator_Password__c</fullName>
    <inlineHelpText>Syndicator Password provided by Multlicom</inlineHelpText>
    <label>Syndicator Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>